@@ -1,0 +1,5 @@
+# semver extension
+comment = 'A semantic version data type'
+default_version = '0.2.1'
+module_pathname = '$libdir/semver'
+relocatable = true
