@@ -7,6 +7,8 @@ Revision history for PostgreSQL extension semver.
       - Removed the `NO_PGXS` stuff from `Makefile`, as the PostgreSQL core
         team does not recommend its use outside of the core contrib
         extensions.
+      - Added PostgreSQL 9.1 `CREATE EXTENSION` support, including migration
+        from an unpackaged install.
 
 0.2.0 2011-02-05T19:32:49
       - Converted to a native type implemented in C by Sam Vilain. While David
